2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/22_AsmSeul.deca
// Description:
//    Programme mal utilisantion de asm sans les parenthèse
// Resultats:
//      Programme incorrecte syntaxiquement : 9:20: mismatched input ';' expecting '('
// Historique:
//    cree le 17/01/2023
class A extends B {
    protected boolean f,t;
    void getF() asm ;
}